--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4,20 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TO DO \n",
-    "\n",
-    "* Motivation, Introdcution of the algorithm\n",
-    "* Dynamic etc. programming\n",
-    "\n",
-    "* Running Time\n",
-    "* Presentation of results "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Edit Distance \n",
+    "# First Draft\n",
     "___ "
    ]
   },
@@ -31,63 +18,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def edit_simple(str1, str2): \n",
-    "    \"\"\"This function computes the edit distance between two strings\n",
-    "    with costs 1 for insertion, deletion, and substitution\"\"\"\n",
-    "    #Computing the length of the input strings. \n",
-    "    m = len(str1)\n",
-    "    n = len(str2)\n",
-    "    D = [[0 for x in range(n+1)] for x in range(m+1)] \n",
-    "    A = [[0 for x in range(n+1)] for x in range(m+1)] \n",
-    "    # Filling the list from top to bottom. \n",
-    "    for i in range(m+1): \n",
-    "        for j in range(n+1): \n",
-    "            if i == 0: \n",
-    "                D[i][j] = j  # insertion  \n",
-    "            elif j == 0: \n",
-    "                D[i][j] = i    #deletion\n",
-    "            elif str1[i-1] == str2[j-1]: \n",
-    "                D[i][j] = D[i-1][j-1] \n",
-    "            else: \n",
-    "                D[i][j] = min(D[i][j-1] + 1,    # insertion     \n",
-    "                              D[i-1][j] + 1,    # deletion\n",
-    "                              D[i-1][j-1]+1)    # substitution\n",
-    "  \n",
-    "    return D[m][n]"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare(D, m, n): \n",
+    "    if D[m, n - 1] < D[m - 1, n - 1] and D[m, n - 1] < D[m - 1, n]: \n",
+    "        return \"insert\", m, n-1\n",
+    "    elif D[m - 1, n] < D[m - 1, n - 1] and D[m - 1, n] < D[m - 1, n - 1]:\n",
+    "        return \"delete\", m-1, n\n",
+    "    elif D[m - 1, n - 1] <= D[m, n - 1] and D[m - 1, n - 1] <= D[m - 1, n]:\n",
+    "        if D[m-1, n -1] == D[m,n]: \n",
+    "            return \"nothing\", m-1, n-1\n",
+    "        else: \n",
+    "            return \"substitute\", m-1, n-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backtrack(D, m, n):\n",
+    "    m = m \n",
+    "    n = n\n",
+    "    changes = []\n",
+    "    while m and n > 0: \n",
+    "        changes.append(compare(D, m, n)[0])\n",
+    "        m = compare(D, m, n)[1]\n",
+    "        n = compare(D, m, n)[2]\n",
+    "    if m > 0: \n",
+    "        changes.append(\"delete \"*m)\n",
+    "    if n > 0: \n",
+    "        changes.append(\"insert \"*n)\n",
+    "    return changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def edit_simple(str1, str2): \n",
+    "    \"\"\"This function computes the edit distance between two strings,\n",
+    "    with costs 1 for insertion, deletion, and substitution\"\"\"\n",
+    "    #Computing the length of the input strings. \n",
+    "    m = len(str1)\n",
+    "    n = len(str2)\n",
+    "    D = np.zeros(((m+1), (n+1)))  \n",
+    "    # Filling the list from top to bottom. \n",
+    "    for i in range(m+1): \n",
+    "        for j in range(n+1): \n",
+    "            if i == 0: \n",
+    "                D[i, j] = j  # insertion  \n",
+    "            elif j == 0: \n",
+    "                D[i,j] = i    #deletion\n",
+    "            elif str1[i-1] == str2[j-1]: \n",
+    "                D[i, j] = D[i-1, j-1] \n",
+    "            else: \n",
+    "                D[i, j] = min(D[i, j-1] + 1,    # insertion     \n",
+    "                              D[i-1, j] + 1,    # deletion\n",
+    "                              D[i-1, j-1]+1)    # substitution\n",
+    "    cost = D[m,n]\n",
+    "    m = np.size(D, 0) - 1\n",
+    "    n = np.size(D, 1) - 1 \n",
+    "    changes = backtrack(D, m, n)     \n",
+    "    return cost, changes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
     "def edit_weight(str1, str2): \n",
-    "    \"\"\"This function computes the edit distance between two strings, \n",
-    "    with costs 2 for insertion and deletion and cost 1 for substitution\"\"\"\n",
-    "    #Computing the length of the strings\n",
+    "    \"\"\"This function computes the edit distance between two strings,\n",
+    "    with costs 1 for insertion, deletion, and substitution\"\"\"\n",
+    "    #Computing the length of the input strings. \n",
     "    m = len(str1)\n",
     "    n = len(str2)\n",
-    "    D = [[0 for x in range(n+1)] for x in range(m+1)] \n",
-    "    # Filling the list from top to bottom \n",
+    "    D = np.zeros(((m+1), (n+1)))  \n",
+    "    # Filling the list from top to bottom. \n",
     "    for i in range(m+1): \n",
     "        for j in range(n+1): \n",
     "            if i == 0: \n",
-    "                D[i][j] = j*2    \n",
+    "                D[i, j] = j  # insertion  \n",
     "            elif j == 0: \n",
-    "                D[i][j] = i *2   \n",
+    "                D[i,j] = i    #deletion\n",
     "            elif str1[i-1] == str2[j-1]: \n",
-    "                D[i][j] = D[i-1][j-1] \n",
+    "                D[i, j] = D[i-1, j-1] \n",
     "            else: \n",
-    "                D[i][j] =  min(D[i][j-1]   + 2, # insertion b       \n",
-    "                               D[i-1][j]   + 2, # deletion\n",
-    "                               D[i-1][j-1] + 1) # substitution     \n",
-    "  \n",
-    "    return D[m][n] "
+    "                D[i, j] = min(D[i, j-1] + 2,    # insertion     \n",
+    "                              D[i-1, j] + 2,    # deletion\n",
+    "                              D[i-1, j-1]+1)    # substitution\n",
+    "    cost = D[m,n]\n",
+    "    m = np.size(D, 0) - 1\n",
+    "    n = np.size(D, 1) - 1 \n",
+    "    changes = backtrack(D, m, n)     \n",
+    "    return cost, changes"
    ]
   },
   {
@@ -100,23 +140,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
+   "execution_count": 221,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The edit distance is 10 .\n",
-      "The edit distance with weights is 15 .\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(13.0,\n",
+       " ['nothing',\n",
+       "  'nothing',\n",
+       "  'nothing',\n",
+       "  'nothing',\n",
+       "  'nothing',\n",
+       "  'nothing',\n",
+       "  'nothing',\n",
+       "  'substitute',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete delete delete '])"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "X = \"ACTACTAGATTACTTACGGATCAGGTACTTTAGAGGCTTGCAACCA\"\n",
     "Y = \"TACTAGCTTACTTACCCATCAGGTTTTAGAGATGGCAACCA\"\n",
-    "print \"The edit distance is\", edit_simple(X,Y), \".\"\n",
-    "print \"The edit distance with weights is\",edit_weight(X,Y), \".\""
+    "edit_simple(X,Y)\n",
+    "edit_weight(X,Y)"
    ]
   },
   {
@@ -128,25 +216,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 225,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The edit distance is 37 .\n",
-      "The edit distance with weights is 58 .\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(47.0,\n",
+       " ['delete',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'nothing',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'delete',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'delete',\n",
+       "  'substitute',\n",
+       "  'substitute',\n",
+       "  'delete delete delete delete delete delete delete delete delete delete delete delete delete delete delete delete delete delete delete delete '])"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "X = \"AASRPRSGVPAQSDSDPCQNLAATPIPSRPPSSQSCQKCRADARQGRWGP\"\n",
     "Y = \"SGAPGQRGEPGPQGHAGAPGPPGPPGSDG\"\n",
-    "print \"The edit distance is\", edit_simple(X,Y), \".\"\n",
-    "print \"The edit distance with weights is\",edit_weight(X,Y), \".\""
+    "edit_simple(X,Y)\n",
+    "edit_weight(X,Y)"
    ]
   },
   {
@@ -165,7 +286,9 @@
     "\n",
     "\"In computer science and information theory, a Huffman code is a particular type of optimal prefix code that is commonly used for lossless data compression. The process of finding and/or using such a code proceeds by means of Huffman coding, an algorithm developed by David A. Huffman while he was a Sc.D. student at MIT, and published in the 1952 paper \"A Method for the Construction of Minimum-Redundancy Codes\".[1]\n",
     "\n",
-    "The output from Huffman's algorithm can be viewed as a variable-length code table for encoding a source symbol (such as a character in a file). The algorithm derives this table from the estimated probability or frequency of occurrence (weight) for each possible value of the source symbol. As in other entropy encoding methods, more common symbols are generally represented using fewer bits than less common symbols. Huffman's method can be efficiently implemented, finding a code in time linear to the number of input weights if these weights are sorted. \""
+    "The output from Huffman's algorithm can be viewed as a variable-length code table for encoding a source symbol (such as a character in a file). The algorithm derives this table from the estimated probability or frequency of occurrence (weight) for each possible value of the source symbol. As in other entropy encoding methods, more common symbols are generally represented using fewer bits than less common symbols. Huffman's method can be efficiently implemented, finding a code in time linear to the number of input weights if these weights are sorted. \"\n",
+    "\n",
+    "Source Wikipedia"
    ]
   },
   {
