--- a/notebook.tex
+++ b/notebook.tex
@@ -363,17 +363,29 @@ we therefore propose an algorithm based on the solution for the longest
 common subsequence that was covered in class. This algortihm falls under
 the dynamic programming paradigm.
 
-The idea of Dynamic Programming is to solve a large problem that has too
-many potential combinations to solve greedily, by dividing it into
-subproblems. In contrast to divide and conquer algorithms, the
+The principle behind dynamic programming is to solve a large problem
+that has too many potential combinations to solve greedily by dividing
+it into subproblems. In contrast to divide and conquer algorithms, the
 subproblems in dynamic programming overlap; the solution of one
 subproblem depends on the solution of others.
 
-The subproblems in this case involves comparing substrings, rather than
-the whole string at once. The program creates a table where the two
-strings are compared prefix by prefix where all three operations
-(insert, delete and substitude) are available. Here below each operation
-comes with the cost of 1.
+The subproblems in this case involve comparing substrings, rather than
+the whole string at once. The optimal solution is built up
+incrementally, from the minimal size subproblem to the solution to the
+whole problem. The smallest subproblem compares substrings of length 0.
+The algorithm then increments the substrings, and counts the cost of the
+operation. The cost of the operations is determined by checking whether
+the additional characters obtained by moving towards the respective
+directions matches the substring so far built-up or not. This way, the
+algorithm creates a table where the two strings are compared prefix by
+prefix where all three operations (insert, delete and substitude) are
+available, and the cost is recorded in the table. At every step, the
+algorithm relies on the sub-solution thus far built-up in determining
+the total cost value to record; it adds the cost of the currrent
+operation to the costs recorded in the three adjacent cells that have
+already been determined. This way the minimum edit distance is returned
+in the lower right cell of the table. A solution path can then be
+recovered by tracing the lowest cost path in the table backwards.
 
     \subsection{Proposed algorithm}\label{proposed-algorithm}
 
@@ -467,7 +479,7 @@ for substitution.
 insertion, and deletion equal 1.
 
     \begin{Verbatim}[commandchars=\\\{\}]
-{\color{incolor}In [{\color{incolor}16}]:} \PY{c+c1}{\PYZsh{}Initializing the strings, which shall be analyzed.}
+{\color{incolor}In [{\color{incolor}17}]:} \PY{c+c1}{\PYZsh{}Initializing the strings, which shall be analyzed.}
          \PY{n}{X} \PY{o}{=} \PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{ACTACTAGATTACTTACGGATCAGGTACTTTAGAGGCTTGCAACCA}\PY{l+s+s2}{\PYZdq{}}
          \PY{n}{Y} \PY{o}{=} \PY{l+s+s2}{\PYZdq{}}\PY{l+s+s2}{TACTAGCTTACTTACCCATCAGGTTTTAGAGATGGCAACCA}\PY{l+s+s2}{\PYZdq{}}
          
@@ -476,55 +488,12 @@ insertion, and deletion equal 1.
 \end{Verbatim}
 
 
-\begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}16}]:} ['-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          'S',
-          '-',
-          'S',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          'S',
-          '-',
-          '-',
-          'S',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          'S',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          '-',
-          'D',
-          'D',
-          'D',
-          'D',
-          'D']
-\end{Verbatim}
-            
+    \begin{Verbatim}[commandchars=\\\{\}]
+10.0
+['-', '-', '-', '-', '-', '-', '-', 'S', '-', 'S', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', 'S', '-', '-', 'S', '-', '-', '-', '-', '-', '-', '-', '-', 'S', '-', '-', '-', '-', '-', '-', 'D', 'D', 'D', 'D', 'D']
+
+    \end{Verbatim}
+
     Computing the edit distance and the backtrace if costs of substitution
 equal 1 and the costs of insertion, and deletion equal 2.
 
@@ -599,6 +568,40 @@ remaining steps.
     \section{Huffman codes}\label{huffman-codes}
 
 \subsection{Discussion of the probem}\label{discussion-of-the-probem}
+
+Computers store information in binary codes, and thus translating
+alphabets or other symbols used by humans into binary code is a very old
+and fundamental problem in computer science. Dictionaries that translate
+alphabets to code can be created with different objectives; they can be
+optimised to mininimise storage space or lookup time, for example, and
+this can be done with large alphabet or symbol systems in mind, or with
+small symbol systems and large and variable frequency text inputs in
+mind.
+
+In this problem, we are faced with a small, fixed length alphabet for
+which we want a bindary encoding dictionary that is built to minimise
+storage space given variable text sizes and character frequencies. The
+idea is to custom-build the dictionary given a certain piece of text, so
+that we can minimise the storage space required for this particular
+piece of text.
+
+Fundamental to the problem is that we base the code on the frequencies
+of characters found in the text to ensure the lowest cost compression.
+Based on this frequency count, we propose to build up a tree that
+assigns the shortest codes to elements with high frequency and the
+longest codes to elements with low frequency.
+
+What complicates this problem is that we need to ensure that our
+encoding function uniquely assigns codes to characters, so no code can
+be a prefix to another code. This means that there are potentially many
+ways to
+
+This is done by sorting the table of characters and frequencies, and
+then merging the lowest frequency nodes into a new node. The value of
+the new node is the sum of the frequency of the two characters that it
+merges. Based on this value, the node is then placed back in the
+frequency table. Continuing with this process, we aggregate the
+individual characters into nested lists.
 
     \subsection{The proposed algorithm}\label{the-proposed-algorithm}
 
