--- a/DMO Assignment 2 - Programming.ipynb
+++ b/DMO Assignment 2 - Programming.ipynb
@@ -46,9 +46,9 @@
     "    \n",
     "There are potentially many ways to transform one string into another, and trying out all possible combinations to find the lowest cost option would be prohibitively expensive. To solve the problem more efficiently, we therefore propose an algorithm based on the solution for the longest common subsequence that was covered in class. This algortihm falls under the dynamic programming paradigm.  \n",
     "\n",
-    "The principle behind dynamic programming is to solve a large problem that has too many potential combinations to solve greedily by dividing it into subproblems. In contrast to divide and conquer algorithms, the subproblems in dynamic programming overlap; the solution of one subproblem depends on the solution of others.\n",
+    "The idea of Dynamic Programming is to solve a large problem that has too many potential combinations to solve greedily, by dividing it into subproblems. In contrast to divide and conquer algorithms, the subproblems in dynamic programming overlap; the solution of one subproblem depends on the solution of others.\n",
     "\n",
-    "The subproblems in this case involve comparing substrings, rather than the whole string at once. The optimal solution is built up incrementally, from the minimal size subproblem to the solution to the whole problem. The smallest subproblem compares substrings of length 0. The algorithm then increments the substrings, and counts the cost of the operation. The cost of the operations is determined by checking whether the additional characters obtained by moving towards the respective directions matches the substring so far built-up or not. This way, the algorithm creates a table where the two strings are compared prefix by prefix where all three operations (insert, delete and substitude) are available, and the cost is recorded in the table. At every step, the algorithm relies on the sub-solution thus far built-up in determining the total cost value to record; it adds the cost of the currrent operation to the costs recorded in the three adjacent cells that have already been determined. This way the minimum edit distance is returned in the lower right cell of the table. A solution path can then be recovered by tracing the lowest cost path in the table backwards."
+    "The subproblems in this case involves comparing substrings, rather than the whole string at once. The program creates a table where the two strings are compared prefix by prefix where all three operations (insert, delete and substitude) are available. Here below each operation comes with the cost of 1.\n"
    ]
   },
   {
@@ -276,9 +276,13 @@
    "source": [
     "## Proof of Correctness\n",
     "\n",
-    "While calculating the given problems along with the added problem correctly our algorithm has utilized all possible solutions (insert, delete and substitution). The subproblems and their solutions are finite and can only be of the following nature: (i-1, j), (i, j-1) and (i-1, j-1). The algorithm provides a correct solution to the above problems and it’s subproblems showing the full extent of it’s functionality as seen in the above table. We can therefore say that the algorithm can wield any of the possible solutions successfully. Now when a problem is larger (longer text strings) we can expect it to deliver the correct outcome because it is just a matter of having the recursive part of our algorithm run longer until it reaches the end. We can therefore assume that it will also prove to be correct for problems of larger size for, in a longer chain of subproblems (bigger strings of text) the subproblems will not differ in nature nor will the available solutions and the algorithm’s ability to apply them.\n",
+    "We prove correctness by induction. The algorithm correctly identifies the distance between a string, and an empty string as the length of the nonempty string. Now suppose, we have calculated the minimal alignment for k < i, l < j. We will show that the algorithm identifies minimal alignment in the next step, completing the proof of correctness. The edit distance at $i,j$ is based on the optimal edit sequence. Based on the previous results, the algorithm computes the minimum of: \n",
     "\n",
-    "We can equally say that if a person can take an initial step in a staircase there is nothing technically lacking in order to take the remaining steps."
+    "* $ed(A_i, B_j) = ed(A_{i-1}, B_{j-1}) + cost(Substitution)$ or $$ed(A_i, B_j) = ed(A_{i-1}, B_{j-1})$\n",
+    "* $ed(A_i, B_j) = ed(A_{i}, B_{j-1}) + cost(Insertion)$\n",
+    "* $ed(A_i, B_j) = ed(A_{i-1}, B_{j}) + cost(Deletion) $\n",
+    "\n",
+    "Since the previous edit sequence is optimal, and the algorithm computes the minimal value for all possible choices, it derives the minimum, agreeing with the definition of the distance."
    ]
   },
   {
@@ -287,21 +291,7 @@
    "source": [
     "# Huffman codes\n",
     "\n",
-    "## Discussion of the probem\n",
-    "\n",
-    "Computers store information in binary codes. Translating alphabets or other symbols used by humans into binary code is therefore a very old and fundamental problem in computer science. Dictionaries that translate alphabets to code can be created with different objectives; they can be optimised to mininimise storage space or lookup time, for example, and this can be done with large alphabet or symbol systems in mind, or with small symbol systems and large and variable frequency text inputs in mind.\n",
-    "\n",
-    "In this problem, we are faced with a short, fixed length alphabet for which we want a bindary encoding algorithm that is built to minimise storage space given variable text sizes and character frequencies. The idea is to custom-build a dictionary given a certain piece of text, so that we can minimise the storage space required for this particular piece of text.\n",
-    "\n",
-    "To solve this problem we need to create a dictionary based on the frequencies of characters found in the text, ensuring the lowest cost compression. The dictionary needs to assign the shortest codes to elements with high frequency and the longest codes to elements with low frequency. What complicates this problem is that we need to ensure that our encoding function uniquely assigns codes to characters, so no code can be a prefix to another code. We therefore face a tradeoff: If we assifgn a short code to a high frequency character to reduce the cost incurred in the encoding of this frequency, then all other code assignments will be relatively long and more costly, because they cannot begin with this short prefix. The problem does not have a known analytical solution, and trying out all possible encoding functions would be prohibitively expensive.\n",
-    "\n",
-    "The algorithm we propose is a greedy algorithm, that works through the text string one by one. It begins by  creating a table of frequencies of characters found in the text and sorting it based on frequency. Each tuple of characer and frequency is called a node.\n",
-    "\n",
-    "The algorithm then merges the two lowest frequency characters/nodes into a new node. The value of the new node is the sum of the frequency of the two characters, or the value of the two nodes that it merges. Based on this value, the node is then placed back in the frequency table. Continuing with this process, we aggregate the individual characters into nested lists, until the frequency table contains only one node with many nested nodes. The result is also called a Huffman tree, named after the inventor of the algorithm (at the time a MIT Master's student).\n",
-    "\n",
-    "The cost of this algorithm is O(n). It can be run in linear time, because the cost of most operations only depends on the length of the alphabet used, which is constant in this configuration of the problem. The only operations that depend on the size of the text input n are the frequency count, which requires us to iterate through the text once, and the encoding, which again requires us to iterate through the text once. There is no recursion required.\n",
-    "\n",
-    "In the next subsection we present the code for this algorithm, along with short descriptions of each function and their associated cost, and the resulting dictionary for the sample text inputs we were given."
+    "## Discussion of the probem"
    ]
   },
   {
@@ -649,7 +639,7 @@
    "source": [
     "# Proof of Correctness \n",
     "\n",
-    "Denote by $T$ the Huffman tree, $A$ the set of distinct characters with frequency count $f(x), \\forall x \\in A$, and $C(T)$ the costs of the encoding as implied by $T$. \n",
+    "Denote by $T$ the Huffman tree, $A$ the set of distinct characters with frequency count $f(x), \\forall x \\in A$, and $C(T)$ the costs of the encoding as implied by $T$, and depth(a,T) the depth of the tree $T$ for leaf $a$. \n",
     "\n",
     "First, an encoding of x is a prefix of an encoding of y if and only if the path of x is a prefix of the path of y. A path is uniquely associated with one character. Therefore, the Huffman tree produces valid prefix codes. \n",
     "\n",
@@ -670,7 +660,7 @@
     "$$C(T') = \\sum_{x \\in A}f(x)*depth(x,T')$$. \n",
     "\n",
     "In particular: \n",
-    "$$C(T') = \\sum_{x \\in A \\not \\{a,b\\}}f(x)*depth(x,T') + f(a)*depth(b,T) + f(b) * depth(a,T)$$. \n",
+    "$$C(T') = \\sum_{x \\in A \\setminus \\{a,b\\}}f(x)*depth(x,T') + f(a)*depth(b,T) + f(b) * depth(a,T)$$. \n",
     "\n",
     "It follows that: \n",
     "$$C(T') - C(T) = f(a) * (depth(b,T) - depth(a,T)) + f(b)*(depth(a,T) - depth(b,T)$$ \n",
@@ -694,7 +684,8 @@
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
     "<b>Lemma 3 </b>  \n",
-    " \n",
+    " Denote by T(n-1) the Huffman tree derived in the n-1-th iteration, and T(n) the tree derived in the nth iteration. Then it follows:\n",
+    "    \n",
     "$$T(n-1) = T(n) + f(a) + f(b)$$\n",
     "</div> \n",
     "\n",
@@ -703,9 +694,9 @@
     "$$C(T) = \\sum_{x \\in A} f(x)*depth(x, T(n)) $$\n",
     "\n",
     "\n",
-    "$$\\sum_{x \\in \\not \\{a,b\\}} f(x) * depth(x, T(n-1)) + f(a) * depth(a, T(n)) + f(b) * depth(a, T(n)) $$\n",
+    "$$\\sum_{x \\in \\setminus \\{a,b\\}} f(x) * depth(x, T(n-1)) + f(a) * depth(a, T(n)) + f(b) * depth(a, T(n)) $$\n",
     "\n",
-    "$$= \\sum_{x \\in \\not \\{a,b\\}} f(x) * depth(x, T(n-1)) + (f(a) + f(b)) * depth(a, T(n-1) + f(a) + f(b) = C(T) + f(a) + f(b)$$\n",
+    "$$= \\sum_{x \\in \\setminus \\{a,b\\}} f(x) * depth(x, T(n-1)) + (f(a) + f(b)) * depth(a, T(n-1) + f(a) + f(b) = C(T) + f(a) + f(b)$$\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Theorem </b> \n",
